--- a/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
@@ -306,7 +306,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="117" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PHY-Uf-ZVw">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="117" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PHY-Uf-ZVw">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -338,13 +338,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is the tweet, it might be longer than this." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFN-Ak-m93">
-                                                    <rect key="frame" x="12" y="70" width="273.5" height="41"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="12" y="70" width="291" height="38.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date time yada yada" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1id-CX-dXO">
-                                                    <rect key="frame" x="12" y="115" width="115.5" height="15"/>
+                                                    <rect key="frame" x="12" y="112.5" width="115.5" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -368,6 +368,13 @@
                                                 <constraint firstItem="ZWZ-On-Zst" firstAttribute="top" secondItem="1OU-UM-VNB" secondAttribute="bottom" constant="4" id="zG7-1w-ynS"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateTimeLabel" destination="1id-CX-dXO" id="N1s-Si-7ur"/>
+                                            <outlet property="nameLabel" destination="1OU-UM-VNB" id="gSQ-ss-Qgt"/>
+                                            <outlet property="profileImageView" destination="70d-RS-h8g" id="Ryu-5S-lF9"/>
+                                            <outlet property="screenNameLabel" destination="ZWZ-On-Zst" id="Iyi-aN-nCQ"/>
+                                            <outlet property="tweetLabel" destination="HFN-Ak-m93" id="1r6-R3-mdg"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CounterCell" rowHeight="45" id="F2t-P3-H0A" customClass="RetweetFavoriteCell" customModule="TwitterDemo" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="188" width="320" height="45"/>
@@ -417,6 +424,10 @@
                                                 <constraint firstItem="IZ3-MZ-neR" firstAttribute="top" secondItem="Emn-kT-YEE" secondAttribute="top" id="xIb-ET-pJ6"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="favoriteLabel" destination="t0M-fh-sG2" id="KCm-uS-161"/>
+                                            <outlet property="retweetLabel" destination="Emn-kT-YEE" id="X44-YM-qba"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ControlsCell" rowHeight="64" id="bUj-mu-ti7" customClass="ControlsCell" customModule="TwitterDemo" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="233" width="320" height="64"/>
