--- a/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/TwitterDemo/Base.lproj/Main.storyboard
@@ -309,7 +309,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="117" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PHY-Uf-ZVw">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetDetailCell" rowHeight="160" id="8lD-wa-9kQ" customClass="DetailTweetCell" customModule="TwitterDemo" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="320" height="160"/>
@@ -338,8 +338,8 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is the tweet, it might be longer than this." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFN-Ak-m93">
-                                                    <rect key="frame" x="12" y="70" width="291" height="38.5"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                                                    <rect key="frame" x="12" y="70" width="265.5" height="38.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -435,7 +435,56 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bUj-mu-ti7" id="6Oq-57-Jbg">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NbL-xY-gSN">
+                                                    <rect key="frame" x="145" y="17" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="VZv-fu-Tct"/>
+                                                        <constraint firstAttribute="height" constant="30" id="xKK-x4-jkz"/>
+                                                    </constraints>
+                                                    <state key="normal" backgroundImage="retweet_unfilled"/>
+                                                    <connections>
+                                                        <action selector="onRetweet:" destination="bUj-mu-ti7" eventType="touchUpInside" id="Iyb-Nv-u0o"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggQ-67-XDc">
+                                                    <rect key="frame" x="225" y="17" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="kRc-8i-Mbp"/>
+                                                        <constraint firstAttribute="height" constant="30" id="t5X-CE-Djz"/>
+                                                    </constraints>
+                                                    <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <state key="normal" backgroundImage="favorite_unfilled"/>
+                                                    <connections>
+                                                        <action selector="onFavorite:" destination="bUj-mu-ti7" eventType="touchUpInside" id="zY2-gA-rlA"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B27-XQ-G4E">
+                                                    <rect key="frame" x="65" y="17" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="DE2-H9-tJZ"/>
+                                                        <constraint firstAttribute="height" constant="30" id="ri0-ss-HeM"/>
+                                                    </constraints>
+                                                    <state key="normal" backgroundImage="reply"/>
+                                                    <connections>
+                                                        <action selector="onReply:" destination="bUj-mu-ti7" eventType="touchUpInside" id="fIW-uZ-8uq"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="NbL-xY-gSN" firstAttribute="centerY" secondItem="6Oq-57-Jbg" secondAttribute="centerY" id="HOt-p1-F7t"/>
+                                                <constraint firstItem="NbL-xY-gSN" firstAttribute="centerY" secondItem="6Oq-57-Jbg" secondAttribute="centerY" id="Jq3-5T-c9i"/>
+                                                <constraint firstItem="ggQ-67-XDc" firstAttribute="centerY" secondItem="6Oq-57-Jbg" secondAttribute="centerY" id="PY7-8j-kPT"/>
+                                                <constraint firstItem="ggQ-67-XDc" firstAttribute="leading" secondItem="NbL-xY-gSN" secondAttribute="trailing" constant="50" id="Vrc-2t-LVk"/>
+                                                <constraint firstItem="NbL-xY-gSN" firstAttribute="leading" secondItem="B27-XQ-G4E" secondAttribute="trailing" constant="50" id="gE1-fT-xVn"/>
+                                                <constraint firstItem="B27-XQ-G4E" firstAttribute="centerY" secondItem="6Oq-57-Jbg" secondAttribute="centerY" id="qK3-B8-5Sc"/>
+                                                <constraint firstItem="NbL-xY-gSN" firstAttribute="centerX" secondItem="6Oq-57-Jbg" secondAttribute="centerX" id="rtA-kd-Rdd"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="favoriteButton" destination="ggQ-67-XDc" id="No4-vI-3ui"/>
+                                            <outlet property="retweetButton" destination="NbL-xY-gSN" id="vOE-tn-pRb"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -460,4 +509,9 @@
             <point key="canvasLocation" x="1920" y="925"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="favorite_unfilled" width="16" height="16"/>
+        <image name="reply" width="16" height="16"/>
+        <image name="retweet_unfilled" width="16" height="16"/>
+    </resources>
 </document>
